# xda_public_cpp

./: .gitignore  CMakeLists.txt  README.MD  README.md  build.sh  example_mti_parse_logfile.cpp  example_mti_receive_data.cpp  main.cpp  multiple_sensors_guide.md  public_xda_cpp_example_mti_receive_data.vcxproj  public_xda_cpp_example_mti_receive_data.vcxproj.filters  send_latest_guide.md  xda_public_cpp.sln
include/: callback_handler.h  config_handler.h  data_logger.h  device_configurator.h  device_scanner.h  gyro_bias_estimator.h  imu_data_processor.h  imu_sensor.h  measurement_handler.h  periodic_request_scheduler.h  timestamped_packet.h
src/: callback_handler.cpp  config_handler.cpp  data_logger.cpp  device_configurator.cpp  device_scanner.cpp  gyro_bias_estimator.cpp  imu_data_processor.cpp  imu_sensor.cpp  measurement_handler.cpp  periodic_request_scheduler.cpp
xspublic/: Makefile
xspublic/xscommon/: abstractadditionallogger.h  additionalloggerbase.cpp  additionalloggerbase.h  calltracer.h  common_qdebug.h  consolelogger.cpp  consolelogger.h  enumexpandersbase.cpp  enumexpandersbase.h  extendedenum.h  fwupdate.c  fwupdate.h  journalexception.cpp  journalexception.h  journalfile.cpp  journalfile.h  journaller.cpp  journaller.h  journalloglevel.h  journalstackwalker.h  journalthreader.cpp  journalthreader.h  stackdumper.cpp  stackdumper.h  stackwalker.cpp  stackwalker.h  stackwalker_linux.cpp  stackwalker_linux.h  threading.cpp  threading.h  xbus.c  xbus.h  xbusparser.c  xbusparser.h  xprintf.cpp  xprintf.h  xscommon_config.h  xsens_debugtools.h  xsens_generic_matrix.h  xsens_janitors.h  (+5 more)
xspublic/xscontroller/: compat.h  (+174 more)
(+165 files in other folders)
